fix alignment of facet count

--- a/css/less/scaffolding.less
+++ b/css/less/scaffolding.less
@@ -500,9 +500,9 @@ div#content > table.table {
 
   // Facet counter
   .facet-count {
-    padding-left: 4px;
+    padding-left: 2px 5px;
     position: absolute;
-    right: 5px;
+    right: 0;
   }
 
 }
